--- a/telas/Tis2/client/src/css/index.css
+++ b/telas/Tis2/client/src/css/index.css
@@ -21,18 +21,21 @@ Last change	: 2015/03/27
 /*=== 1. General Structure ===*/
 html,
 body {
-  background: #efefef;
+  background-image: url("imagens/books.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: right bottom; 
   padding: 10px;
-  font-family: 'Varela Round';
+  font-family: 'Segoe UI';
   text-align: center;
 }
 /*=== 2. Anchor Link ===*/
 a {
-  color: #aaaaaa;
+  color: #117CBF;
   transition: all ease-in-out 200ms;
 }
 a:hover {
-  color: #333333;
+  color: #FFB043;
   text-decoration: none;
 }
 /*=== 3. Text Outside the Box ===*/
@@ -61,6 +64,7 @@ a:hover {
   padding: 7px 0;
   font-weight: bold;
   height:auto;
+  width: 160px;
 }
 .login-form-1 .form-control::-webkit-input-placeholder {
   color: #999999;
@@ -93,8 +97,8 @@ a:hover {
   position: absolute;
   right: -25px;
   top: 50%;
-  background: #ffffff;
-  color: #999999;
+  background-image: url("imagens/play.png");
+  /*color: #999999; */
   padding: 11px 0;
   width: 50px;
   height: 50px;
@@ -281,7 +285,7 @@ label:hover:before {
 /*=== 9. Misc ===*/
 .logo {
   padding: 15px 0;
-  font-size: 25px;
+  font-size: 30px;
   color: #aaaaaa;
   font-weight: bold;
 }
