--- a/telas/Tis2/client/src/css/registro.css
+++ b/telas/Tis2/client/src/css/registro.css
@@ -21,7 +21,7 @@ Last change	: 2015/03/27
 /*=== 1. General Structure ===*/
 html,
 body {
-  background-image: url("imagens/books.png");
+  background-image: url("imagens/form.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: right bottom; 
